--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-      <a href="#" target="_blank"
+      <a href="https://www.linkedin.com/in/michelle-scrimale/" target="_blank"
         ><img
           src="assets/icons/icons8-linkedin-circled.gif"
           alt="Linkedin"
@@ -136,7 +136,7 @@
           class="socicon"
       /></a>
       <a href="#" target="_blank"
-        ><img src="assets/icons/giphy (1).gif" alt="Github" class="socicon"
+        ><img src="assets/icons/giphy (1).gif" alt="Facebook" class="socicon"
       /></a>
     </div>
 
