added proper contact section

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
     <!-- Contact section -->
     <section class="contact" id="contact">
-      <h2>Get In Touch With Me</h2>
-      <p>michelle@scrimalelifeinsgroup.org</p>
+      <h2><a href="mailto:michelle@scrimalelifeinsgroup.org">Get In Touch With Me</a></h2>
     </section>
 
     <!-- Social accounts - Fixed to the right -->
